[gd_scene load_steps=3 format=3 uid="uid://cijaooi8ujuay"]

[ext_resource type="Script" path="res://paused_menu.gd" id="1_868sl"]
[ext_resource type="AudioStream" uid="uid://dss410n04r5m5" path="res://assets/simpleClick.wav" id="2_eccde"]

[node name="PausedMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_868sl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.203922, 0.203922, 0.203922, 0.756863)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.921569)
theme_override_font_sizes/font_size = 30
text = "Остановлено"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Продолжить"

[node name="MenuButton" type="Button" parent="GridContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Меню"

[node name="QuitButton" type="Button" parent="GridContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Выйти"

[node name="ButtonClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_eccde")
volume_db = -18.0
bus = &"SFX"

[connection signal="pressed" from="GridContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="GridContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="GridContainer/QuitButton" to="." method="_on_quit_button_pressed"]
